--- a/assets/linker/styles/styles.css.scss
+++ b/assets/linker/styles/styles.css.scss
@@ -1,6 +1,16 @@
 @import "bourbon";
+@import "variables";
+@import "neat";
 
 section{
-  width: em(109);
+  &.top{
+    @include outer-container;
+  }
+}
+
+.title{
+  @include span-columns(4);
+  @include shift(3);
   background: gray;
+  text-align: center;
 }
