--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -1,8 +1,9 @@
 extends ../layout
 
-.title
-  :markdown
-    # SAILS TESTING
-section
-  :markdown
-    ## Welcome to my Sails site
+block body
+  .title
+    :markdown
+      # SAILS TESTING
+  section.content
+    :markdown
+      ## Welcome to my Sails site
